Attempted bugfix for a contig sectioning problem